--- a/package.json
+++ b/package.json
@@ -1,17 +1,38 @@
 {
-  "name": "elogAppTruck",
+  "name": "rnBaseProject",
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "android": "cd android && gradlew clean && cd .. && react-native run-android",
+    "ios": "cd ios && pod install && cd .. && react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^7.1.10",
+    "@react-navigation/native-stack": "^7.3.14",
+    "@reduxjs/toolkit": "^2.8.2",
+    "@types/react-native-vector-icons": "^6.4.18",
+    "@types/react-redux": "^7.1.34",
+    "axios": "^1.9.0",
+    "dayjs": "^1.11.13",
+    "i18next": "^25.2.1",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
-    "react-native": "0.74.1"
+    "react-i18next": "^15.5.3",
+    "react-native": "0.74.1",
+    "react-native-bootsplash": "^6.3.9",
+    "react-native-config": "^1.5.5",
+    "react-native-gesture-handler": "2.15.0",
+    "react-native-reanimated": "3.9.0",
+    "react-native-safe-area-context": "^5.4.1",
+    "react-native-screens": "^4.11.1",
+    "react-native-svg": "^15.12.0",
+    "react-native-vector-icons": "^10.2.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -21,12 +42,15 @@
     "@react-native/eslint-config": "0.74.83",
     "@react-native/metro-config": "0.74.83",
     "@react-native/typescript-config": "0.74.83",
+    "@types/lodash": "^4.17.17",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
-    "eslint": "^8.19.0",
+    "eslint": "^9.28.0",
+    "husky": "^9.1.7",
     "jest": "^29.6.3",
-    "prettier": "2.8.8",
+    "lint-staged": "^16.1.0",
+    "prettier": "^3.5.3",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
   },
