--- a/ios/rnBaseProject/Info.plist
+++ b/ios/rnBaseProject/Info.plist
@@ -61,6 +61,10 @@
 		<string>OpenSans-Regular.ttf</string>
 		<string>OpenSans-SemiBold.ttf</string>
 		<string>OpenSans-SemiBoldItalic.ttf</string>
+		<string>MaterialIcons.ttf</string>
+		<string>FontAwesome.ttf</string>
+		<string>AntDesign.ttf</string>
+		<string>Ionicons.ttf</string>
 	</array>
 </dict>
 </plist>
