--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "^4.11.1",
     "react-native-svg": "^15.12.0",
+    "react-native-svg-transformer": "^1.5.1",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0"
   },
