--- a/ios/rnBaseProject/Info.plist
+++ b/ios/rnBaseProject/Info.plist
@@ -24,6 +24,12 @@
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>App cần quyền truy cập camera</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>App cần quyền truy cập thư viện ảnh</string>
+	<key>NSUserNotificationUsageDescription</key>
+	<string>App cần quyền gửi thông báo</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
