--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "cd android && gradlew clean && cd .. && react-native run-android",
+    "android": "cd android && ./gradlew clean && cd .. && react-native run-android",
+    "android:dev": "ENVFILE=.env.dev yarn android",
+    "android:staging": "ENVFILE=.env.staging yarn android",
+    "android:prod": "ENVFILE=.env.prod yarn android",
     "ios": "cd ios && pod install && cd .. && react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
@@ -11,6 +14,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-camera-roll/camera-roll": "^7.10.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^7.3.15",
     "@react-navigation/native": "^7.1.10",
@@ -28,11 +32,13 @@
     "react-native-bootsplash": "^6.3.9",
     "react-native-config": "^1.5.5",
     "react-native-gesture-handler": "2.15.0",
+    "react-native-permissions": "^5.4.1",
     "react-native-reanimated": "3.9.0",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "^4.11.1",
     "react-native-svg": "^15.12.0",
     "react-native-svg-transformer": "^1.5.1",
+    "react-native-toast-message": "^2.3.0",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0"
   },
